--- a/index.css
+++ b/index.css
@@ -3,18 +3,18 @@
   top: 103px;
   left: 82px;
   width: 365px;
-  height: 701px;
-  background-image: url(./public/photo-20240522-114331-1@2x.png);
+  height: 799px;
+  background-image: url(./public/photo-20240522-114331-1@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
 }
 .output-onlinegiftools-1-icon {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 522px;
-  height: 517px;
+  top: -1px;
+  left: -29px;
+  width: 586px;
+  height: 580px;
 }
 .photo-2024-05-22-11-43-31-1-parent {
   position: absolute;
@@ -270,72 +270,92 @@
   height: 65px;
   mix-blend-mode: darken;
 }
-.computer-old-electronics-icon {
+.computer-old-electronics-icon,
+.frame12 {
   position: absolute;
+  height: 32px;
+  overflow: hidden;
+}
+.computer-old-electronics-icon {
   top: 0;
   left: 25px;
   width: 32px;
-  height: 32px;
-  overflow: hidden;
   object-fit: cover;
 }
-.frame11,
 .frame12 {
   cursor: pointer;
   border: 0;
   padding: 0;
   background-color: transparent;
+  top: 10px;
+  left: 0;
+  width: 57px;
+}
+.frame11,
+.home {
+  top: 0;
+  width: 72px;
+  height: 65px;
+}
+.frame11 {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  position: absolute;
   left: 0;
   overflow: hidden;
 }
-.frame12 {
-  position: absolute;
-  top: 10px;
-  width: 57px;
-  height: 32px;
+.home {
+  left: 144px;
 }
-.frame11 {
-  width: 72px;
-  height: 65px;
-}
-.frame11,
+.frame13,
 .home,
 .info1 {
   position: absolute;
-  top: 0;
-}
-.home {
-  left: 144px;
-  width: 72px;
-  height: 65px;
 }
 .info1 {
+  top: 0;
   left: 2px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
   width: 46px;
 }
-.frame-child1,
-.frame13 {
-  position: absolute;
-  left: 0;
-}
 .frame13 {
   top: 49px;
+  left: 0;
   width: 48px;
   height: 10px;
   overflow: hidden;
 }
-.frame-child1 {
+.frame-child1,
+.vector-icon1 {
+  position: absolute;
   top: 0;
+  left: 0;
+}
+.frame-child1 {
   background-color: var(--color-gainsboro);
   width: 72px;
   height: 65px;
   mix-blend-mode: darken;
 }
+.vector-icon1 {
+  height: 100%;
+  width: 100%;
+  right: 0;
+  bottom: 0;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%;
+}
 .frame15,
-.interface-essential-informatio-icon {
+.interface-essential-informatio {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
   position: absolute;
   top: 0;
   left: 9px;
@@ -344,10 +364,6 @@
   overflow: hidden;
 }
 .frame15 {
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  background-color: transparent;
   top: 11px;
   left: 0;
   width: 41px;
@@ -369,7 +385,7 @@
   left: 288px;
 }
 .footer {
-  top: 636px;
+  top: 735px;
   left: 0;
   border-radius: 35px;
   background-color: #414141;
@@ -501,7 +517,7 @@
   width: 90px;
   height: 25px;
 }
-.vector-icon1 {
+.vector-icon2 {
   position: absolute;
   height: 68%;
   width: 20.99%;
@@ -523,7 +539,7 @@
   width: 55px;
   height: 25px;
 }
-.vector-icon2 {
+.vector-icon3 {
   position: absolute;
   height: 28%;
   width: 8.64%;
@@ -690,24 +706,29 @@
   height: 158px;
 }
 .frame16 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 360px;
   text-align: center;
   font-size: var(--font-size-xl);
   color: var(--color-cornflowerblue);
   font-family: var(--font-karantina);
 }
 .frame,
-.frame16 {
+.frame16,
+.iphone-14-15-pro-1 {
+  height: 800px;
+  overflow: hidden;
+}
+.frame {
   position: absolute;
   top: 0;
   left: 0;
   width: 360px;
-  height: 706px;
-  overflow: hidden;
 }
 .iphone-14-15-pro-1 {
   width: 100%;
   position: relative;
   background-color: var(--color-darkslateblue);
-  height: 701px;
-  overflow: hidden;
 }
