--- a/Market/global.css
+++ b/Market/global.css
@@ -1,30 +1,35 @@
 body {
   margin: 0;
   line-height: normal;
-
 }
 
 :root {
   /* fonts */
+  --font-press-start-2p: "Press Start 2P";
   --font-jockey-one: "Jockey One";
   --font-karantina: Karantina;
-  --font-itim: Itim;
-  --font-inter: Inter;
 
   /* font sizes */
-  --font-size-base: 16px;
-  --font-size-xl: 20px;
+  --font-size-smi: 13px;
   --font-size-6xs: 7px;
+  --font-size-13xl: 32px;
+  --font-size-base: 16px;
+  --font-size-mini: 15px;
+  --font-size-xl: 20px;
 
   /* Colors */
   --color-darkslateblue: #2e378c;
   --color-white: #fff;
-  --color-cornflowerblue: #79aefe;
   --color-midnightblue: #192061;
+  --color-darkslategray: #414141;
   --color-gainsboro: #d9d9d9;
   --color-gray: #7e7e7e;
+  --color-mediumslateblue: #4456ff;
+  --color-cornflowerblue: #79aefe;
 
   /* Border radiuses */
   --br-11xl: 30px;
+  --br-16xl: 35px;
+  --br-xl: 20px;
   --br-3xs: 10px;
 }
