--- a/Referal/global.css
+++ b/Referal/global.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   line-height: normal;
-
 }
 
 :root {
@@ -10,9 +9,11 @@ body {
   --font-karantina: Karantina;
   --font-itim: Itim;
   --font-inter: Inter;
+  --font-press-start-2p: "Press Start 2P";
 
   /* font sizes */
   --font-size-base: 16px;
+  --font-size-mini: 15px;
   --font-size-xl: 20px;
   --font-size-6xs: 7px;
 
@@ -21,10 +22,12 @@ body {
   --color-white: #fff;
   --color-cornflowerblue: #79aefe;
   --color-midnightblue: #192061;
+  --color-darkslategray: #414141;
   --color-gainsboro: #d9d9d9;
   --color-gray: #7e7e7e;
 
   /* Border radiuses */
   --br-11xl: 30px;
   --br-3xs: 10px;
+  --br-16xl: 35px;
 }
